internal/xds/translator/testdata/out/xds-ir/http-route-with-metadata.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - example.com
    name: first-listener/example_com
    routes:
    - match:
        pathSeparatedPrefix: /v1/example
        queryParameters:
        - name: debug
          stringMatch:
            exact: "yes"
      metadata:
        filterMetadata:
          io.envoyproxy.gateway.metadata:
            annotations:
              foo: bar
            groupVersion: gateway.networking.k8s.io/v1
            kind: HTTPRoute
            name: first-route-name
            namespace: first-route-ns
            sectionName: first-route-rule
      name: envoy-gateway/httproute-2/rule/0/match/0/example.com
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        pathSeparatedPrefix: /v1/example
      name: envoy-gateway/httproute-3/rule/0/match/0/example.com
      route:
        cluster: second-route-dest
        upgradeConfigs:
        - upgradeType: websocket
